# evil-asset-manager

./: README.md
docs/: Doxyfile
docs/markdown/: design-ideas-loader.md
docs/notes/: loader-scratchpad.odg  loader-scratchpad.txt
evil/asset-manager/: asset-manager.h  evil-wrapper.cpp  what-is-asset-manager.txt
evil/asset-manager/imp/: asset-class.h  asset-loader.cpp  asset-loader.h  asset-manager.cpp  asset.cpp  asset.h  string-asset.cpp  string-asset.h
evil/loader/: evil-wrapper.cpp  loader.h  what-is-loader.txt
evil/math/: math.h
evil/signals/: evil-wrapper.cpp
evil/util/: error.h
examples/: CMakeLists.txt
examples/src/: glfw-tests.cpp  run-tests.cpp
examples/src/tests/: tc-load-json.h  tc-test.h
examples/test-data/: test-0.json  test-classes-1.json  test-data-2-A.json  test-data-2-B.json  test-data-2-C.json  test-data-2-D.json  test-data-2-E.json  test-data-2-F.json  test-data-2-G.json
